--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "@freecodecamp/example": "1.1.0"
+    "helmet": "^3.14.0"
   }
 }
