--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "@freecodecamp/example": "^1.1.0",
     "express": "^4.18.2"
   }
 }
