--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-express-api",
   "version": "1.0.0",
-  "description": "A project that does something awesome",
+  "description": "A project that does something awesomes",
   "main": "index.js",
   "scripts": {
     "start": "node server.js"
